--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
-    "ws": "^8.2.3"
+    "mongoose": "^6.13.8",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.2"
   },
   "devDependencies": {
     "jest": "^27.3.1",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.22",
     "supertest": "^6.1.6"
   },
   "engines": {
     "node": ">=14.0.0"
   },
   "license": "MIT"
-} 
+}
